--- a/Website/calendar.html
+++ b/Website/calendar.html
@@ -47,18 +47,27 @@
 });
 </script>
 <script>
-function loadComponent(elementId, filePath) {
-    fetch(filePath) // Get the file
-      .then(response => response.text()) // Convert response to text
-      .then(data => {
-        document.getElementById(elementId).innerHTML = data; // Insert into the page
-      })
-      .catch(error => console.log("Error loading " + filePath, error)); // Handle errors
+  let mybutton = document.getElementById("backToTop");
+
+  // When user scrolls 20px from top, button shows
+  window.onscroll = function() {scrollFunction()};
+
+
+  function scrollFunction() {
+    if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+      mybutton.style.display = "block";
+    } else {
+      mybutton.style.display = "none";
+    }
   }
-  // Run this when the page loads
-  window.onload = function() {
-    loadComponent("header", "../components/header.html"); // Load header
-    loadComponent("footer", "../components/footer.html"); // Load footer
+  window.topFunction = function () {
+    window.scrollTo({ top: 0, behavior: "smooth" });
+  };
+
+  // Button on click, returns to top
+  function topFunction() {
+    document.body.scrollTop = 0; // For Safari
+    document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
   }
 </script>
 </body>
